☕ Style fix, remove image overflow

--- a/styles/pages/settings.module.scss
+++ b/styles/pages/settings.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   background: var(--input-bg);
   border-radius: 2rem;
+  overflow: hidden;
 }
 
 .profileRoot {
